# trading_app_fastapi

./: .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml
auth/: auth.py  database.py  manager.py
migrations/: env.py
migrations/versions/: 0797b5225638_database_creation.py  12cab08982f0_added_operation.py  ff378e29624f_databaseinit.py
models/: models.py
src/: database.py  main.py
src/auth/: base_config.py  manager.py  models.py  schemes.py  validators.py
src/operations/: models.py  routers.py  schemas.py
src/tasks/: tasks.py
