[tool.poetry]
name = "trading-app"
version = "0.1.0"
description = ""
authors = ["WayupKG <adikgk232323@gmail.com>"]
readme = "README.md"
packages = [{include = "trading_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.30.1"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
