[tool.poetry]
name = "trading-app"
version = "0.1.0"
description = ""
authors = ["WayupKG <adikgk232323@gmail.com>"]
readme = "README.md"
packages = [{include = "trading_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
uvicorn = "^0.30.1"
gunicorn = "^22.0.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
